css/style.css
body, header, main, footer,
nav, aside, section, article, 
ul, figcaption, figure, form, 
label, div, li {
    display: flex;
}



header, main, footer, nav, aside, 
section, article, ul, li, a, p, 
h1, h2, h3, span, figcaption, form, 
label, input, textarea, button {
    flex: 1 1 auto;
}

body, body > header, body > main,
body > main > section figcaption,
body > main > section > article,
body > main > section > article ul {
    flex-direction: column;
}

body > header ul, body > header > nav,
body > main > section, footer, footer > ul
body > main > section > article > div {
    flex-direction: row;
}

body > header > ul,
body > header > nav,
body > main, footer > ul  {
    width: 900px;
} 

body {
    direction: rtl;
    text-align: right;
    margin: 0px;
    line-height: 1;
    padding-bottom: 5px;
    font-family: 'Arial (Hebrew)', Arial;
}

body, body > header {
    align-items: center;
}

body > header, footer {
    width: 100%;
}

a {
    text-decoration: none;
    outline: none;
    color: white;
}

ul {
    list-style: none;
    padding: 0;
}

body > header {
    background: rgb(144,144,144);
    background: linear-gradient(180deg, rgba(144,144,144,1) 0%, rgba(144,144,144,1) 82%, rgba(170,170,170,1) 100%);
    height: 105px;
    margin-bottom: 30px;
    justify-content: space-between;
}

body > header > ul {
    margin: 1em 0 0;
}

body > header > ul > li {
    flex-direction: row-reverse;
    align-items: center;    
    padding-inline-start: 1em;
}

body > header > ul > li > a {
    flex: 0;
    
}

body > header li a {
    font-size: 15px;
    font-weight: bold;


}

#search-box {
    display: flex;
    flex: 0 1 auto;
    flex-direction: row;
    align-items: center;
}
#search-box label {
    display: flex;
    flex: 1 1 auto;
    width: 100%;
}

#search-input {
    width: 132px;
    height: 19px;
    border-radius: 0 0.5em 0 0;
    border: none;
    padding: 0 0.5em;
    box-sizing: border-box;
    margin-inline-end: 1px;
    outline: none;
}

#search-box a {
    width: 19px;
    height: 19px;
    flex: 0 0 auto;
    background-image: url("../img/search_button.png");
}

body > header > nav {
    align-items: center;
}

#logo {
    margin-inline-start: -6px;
}

#logo a {
    width: 142px;
    height: 93px;
    background-image: url("../img/paz_logo.png");
}

#logo ~ ul {
    margin: 0;
    justify-content: space-around;
}

#logo ~ ul > li {
    padding: 1em 0 0;
    flex: 0 1 auto;
    position: relative;
}

#logo ~ ul > li > a {
    padding: 0 0 1em 0;
}

#logo ~ ul > li:first-child a {
    width: 17px;
    height: 17px;
    background-image: url(../img/menu_home.png);
    background-repeat: no-repeat;
    background-position-x: right;
}



#logo ~ ul > li:not(:first-child)::before {
    flex: 0 0 auto;
    font-size: 18px;
    height: 1em;
    content: "";
    background: rgb(243,243,243);
    background: linear-gradient(90deg, rgba(243,243,243,1) 0%, rgba(240,240,240,1) 50%, rgba(237,237,237,1) 100%);
    position: absolute;
    padding: 0 1px;
    margin-right: -1em;
}

/* main */

#index > main,
#index > main > section {
    justify-content: space-between;
    margin-bottom: 18px;;
}

#index > main > section > figure {
    width: 293px;
    height: 355px;
    margin: 0;
    border-bottom-right-radius: 20px;
    background-size: cover;
    justify-content: flex-start;
    align-items: flex-end;
}



figure.bg-image1 {
    background: url("../img/Retail_and_trade.jpg") no-repeat center center; 
}

figure.bg-image2 {
    background: url("../img/Refining.jpg") no-repeat center center;
}


figure.bg-image3 {
    background: url("../img/Industries_and_Services.jpg") no-repeat center center;
}

#index figure > figcaption {
    margin: 5px;
    height: 97px;
    max-width: 248px;
    background-color: rgba(144,144,144,0.8);
    border-bottom-right-radius: 20px;
    padding: 5px 10px;
    box-sizing: border-box;  
     
}

#index figure > figcaption > h3,
#index figure > figcaption > p,
#index figure > figcaption > a {    
    color: white;
    margin: 0;    
}

#index figure > figcaption > h3 {
    font-size: 14px;
    line-height: 14px;
    font-weight: bold;
}

#index figure > figcaption > a ,
#index figure > figcaption > p {
    font-size: 13px;
    line-height: 13px;
}

#index figure > figcaption > a {
    text-align: left;
    text-decoration: underline;
    padding-top: 4px;
}

#index article {
    border-top-right-radius: 20px;
    border: 2px solid rgb(236,236,236);
    background: rgb(236,236,236);
    background: linear-gradient(0deg, rgba(236,236,236,1) 0%, rgba(254,254,254,1) 90%);
    height: 216px;
    max-width: 293px;
    padding: 0 24px;
    box-sizing: border-box;
}



#index article > h3 {
    padding: 0 4px;
    font-size: 14px;
    font-weight: bold;
    line-height: 34px;
    color: #575757;
    margin: 0px;
    height: 34px;
    flex: 0;
    border-bottom: inset;
}

#index article a {
    color: #72716d;
    text-decoration: underline;
    align-self: flex-end;
}

#index figure > figcaption > a,
#index article a  {
    position: relative;
    padding-left: 10px;
}

#index figure > figcaption > a > span:after,
#index article a > span:after {
    content:"";
    position: absolute;
    display: block;
    
    left: 0;
    top: 6px;
    width: 8px;
    height: 9px;
}

#index figure > figcaption > a > span:after {
    background-image: url("../img/read_more_white.png");
}

#index article > div {
    justify-content: space-between;
}

#index article > div > ul {
    flex: 0;
}

#index article > img {
    margin: 15px 0;
}

#index article a > span:after {
    background-image: url("../img/read_more_yellow.png");   
}

/* footer */
footer {
    position: fixed;
    bottom: 0px;
    height: 38px;
    justify-content: center;
    background: rgb(144,144,144);
    background: linear-gradient(0deg, rgba(144,144,144,1) 0%, rgba(144,144,144,1) 82%, rgba(170,170,170,1) 100%);
    font-size: 14px;
}

footer > ul {
    max-width: 900px;
    justify-content: flex-start;
}

footer > ul > li {
    flex: 0 0 auto;
    position: relative;
}

footer > ul > li:not(:first-child)::before {
    flex: 0 0 auto;
    color: white;
    font-size: 15px;
    font-weight: bold;
    content: "|";
    position: absolute;
}

footer > ul > li > a {
    padding: 0 8px 0 7px;
}

#index footer li:last-child > a {
    color: red;
}

footer a[href*="facebook"] {
    display: inline-block;
    background-image: url("../img/fb_icon.png");
    padding: 9px;
    margin-left: 5px;
}

/*  */

#index figure > figcaption > a:hover,
#index article a:hover, a:hover {
    color: #005ca0;
    text-decoration: underline;
}

#index figure > figcaption > a:hover > span:after,
#index article a:hover > span:after {
    background-image: url("../img/read_more_blue.png");       
}

article.slide-show img {
    animation: change-pic 20s steps(4, start) 20s infinite both;     
}

@keyframes change-pic {
    /* You could think of as "step 1" */
    0% {
        content:url("../img/Yellow_click_and_pick_1.jpg");
    }
    /* You could think of as "step 2" */
    33% {
        content:url("../img/Yellow_click_and_pick_2.jpg");
    }
    /* You could think of as "step 3" */
    66% {
        content:url("../img/Yellow_click_and_pick_3.jpg");
    }
    /* You could think of as "step 4" */
    100% {
        content:url("../img/Yellow_click_and_pick_4.jpg");
    }
             
  }

